solved problem with z-index icon

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -5,7 +5,9 @@
   background-image: url("../images/icons/burger-menu.svg");
   background-size: cover;
 
-  @include hover(transform, scale(1.2));
+  @include hover(transform, scale(1.2)) {
+    z-index: 0;
+  };
 
   @include onTablet {
     height: 32px;
