--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,8 +7,8 @@
   text-transform: uppercase;
 
   &__top {
-    position: sticky;
-    top: 0;
+    // position: sticky;
+    // top: 0;
     z-index: 1;
     margin-bottom: 24px;
 
